# cpp_sdl_test

./: CMakeLists.txt
src/: CApp.cpp  CApp.h  CApp_OnCleanup.cpp  CApp_OnEvent.cpp  CApp_OnInit.cpp
